--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ tags
 ExperimentData
 ExperimentDataCheck
 ExperimentVideo
+SavedData
 Configuration.h
 drake_binary
 ExternalSource/myOdometry/pronto/pronto_folders/
