--- a/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/A1/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -48,8 +48,8 @@ task_parameters:
     kp_base_ori: [50, 50, 50]
     kd_base_ori: [5, 5, 5]
     # Foot Linear and orientation gains
-    kp_foot_pos: [100, 100, 200]
-    kd_foot_pos: [10, 10, 0] #10]
+    kp_foot_pos: [100, 100, 100]
+    kd_foot_pos: [10, 10, 10] # [10, 10, 0] #10]
     # Joint
     kp_joint: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
     kd_joint: [10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10., 10.]
