--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,9 @@ set(INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
 include_directories("/usr/local/include")
 link_directories("/usr/local/lib")
 
-# # Dart
-# find_package(DART 6.9 REQUIRED COMPONENTS utils-urdf gui-osg CONFIG)
-# include_directories(${DART_INCLUDE_DIRS})
+# Dart
+find_package(DART 6.9 REQUIRED COMPONENTS utils-urdf gui-osg CONFIG)
+include_directories(${DART_INCLUDE_DIRS})
 
 # Pybind11
 set(USE_PYBIND11 True)
