--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ tags
 ExperimentData
 ExperimentDataCheck
 ExperimentVideo
-Configuration.h
+Configuration.hpp
 drake_binary
 *_RESULTS.yaml
 *.pyc
