--- a/PnC/WBC/CMakeLists.txt
+++ b/PnC/WBC/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(myWBC SHARED ${sources})
 
 target_link_libraries(myWBC myUtils
                             myGoldfarb
-                            myRobotSystem)
+                            myRobotSystem
+                            myDCMPlanner)
 
 install(TARGETS myWBC DESTINATION "${INSTALL_LIB_DIR}")
 install(FILES ${wbc_headers} DESTINATION
