before converting qd to v4

--- a/bindings/pypnc/atlas_pnc/CMakeLists.txt
+++ b/bindings/pypnc/atlas_pnc/CMakeLists.txt
@@ -1,3 +1,2 @@
-pybind11_add_module(atlas-interface atlas_interface_pybind.cpp)
-target_link_libraries(atlas-interface PRIVATE AtlasPnC)
-
+pybind11_add_module(atlas_interface atlas_interface_pybind.cpp)
+target_link_libraries(atlas_interface PRIVATE AtlasPnC)
