--- a/bindings/pypnc/atlas_pnc/CMakeLists.txt
+++ b/bindings/pypnc/atlas_pnc/CMakeLists.txt
@@ -1,5 +1,5 @@
 pybind11_add_module(atlas_interface atlas_interface_pybind.cpp)
-target_link_libraries(atlas_interface PRIVATE AtlasPnC)
+target_link_libraries(atlas_interface PUBLIC AtlasPnC)
 
 pybind11_add_module(atlas_interrupt_logic atlas_interrupt_logic_pybind.cpp)
-target_link_libraries(atlas_interrupt_logic PRIVATE AtlasPnC)
+target_link_libraries(atlas_interrupt_logic PUBLIC AtlasPnC)
