Testing PD Gains. 1) Removed state estimator temporarily to avoid memory error. 2) added some temp vars to A1Interface so that I can check smooth_changing working correctly

--- a/Config/A1/TEST/REAL.yaml
+++ b/Config/A1/TEST/REAL.yaml
@@ -1,7 +1,12 @@
 initial_configuration: [0, 0.7854, -1.57, 0, 0.7854, -1.57, 0, 0.7854, -1.57, 0, 0.7854, -1.57] 
+# initial_configuration: [0, 0.827, -1.53, 0, 0.7854, -1.5, 0, 0.7854, -1.5, 0, 0.7854, -1.5] 
+
 
 control_configuration:
   # kp: [100 , 100 , 120 , 100 , 100 , 120 , 100 , 100 , 120 , 100 , 100 , 120]
   # kd: [30  , 30  , 30  , 30  , 30  , 30  , 30  , 30  , 30  , 30 , 30 , 30]
-  kp: [5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5 , 5, 5, 5]
-  kd: [0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2  , 0.2, 0.2, 0.2]
+  # kp: [40 , 40 , 40 , 40 , 40 , 40 , 40 , 40 , 40 , 40 , 40, 40]
+  # kd: [0.  , 0.  , 0.  , 0. , 0.  , 0.  , 0.  , 0.  , 0.  , 0., 0., 0.]
+  # kd: [1.5  , 1.5  , 1.5  , 1.5  , 1.5  , 1.5  , 1.5  , 1.5  , 1.5, 1.5, 1.5, 1.5]
+  kp: [0.  , 0.  , 0.  , 0. , 0.  , 0.  , 0.  , 0.  , 0.  , 0., 0., 0.]
+  kd: [0.  , 0.  , 0.  , 0. , 0.  , 0.  , 0.  , 0.  , 0.  , 0., 0., 0.]
