--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(qp_test qp_test.cpp)
 target_link_libraries(qp_test pnc-goldfarb pnc-utils)
+
+add_executable(draco_interface_test draco_interface_test.cpp)
+target_link_libraries(draco_interface_test pnc-draco-pnc)
