--- a/messages/CMakeLists.txt
+++ b/messages/CMakeLists.txt
@@ -1,6 +1,6 @@
-PROTOBUF_GENERATE_CPP(pnc-msg-draco-src pnc-msg-draco-header draco_pnc.proto)
+PROTOBUF_GENERATE_CPP(pnc-msg-draco-src pnc-msg-draco-header draco.proto)
 add_library(pnc-msg-draco ${pnc-msg-draco-src} ${pnc-msg-draco-header})
 target_include_directories(pnc-msg-draco PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 
-PROTOBUF_GENERATE_PYTHON(pnc-msg-draco-py draco_pnc.proto)
+PROTOBUF_GENERATE_PYTHON(pnc-msg-draco-py draco.proto)
 add_custom_target(pnc-msg-draco-py-target ALL DEPENDS ${pnc-msg-draco-py})
