--- a/pnc/filters/CMakeLists.txt
+++ b/pnc/filters/CMakeLists.txt
@@ -1,7 +1,7 @@
 FILE(GLOB sources "*.cpp")
 FILE(GLOB headers "*.hpp")
 
-add_library(pnc-filters SHARED ${sources})
+add_library(pnc-filters ${sources})
 target_link_libraries(pnc-filters pnc-utils)
 
 install(TARGETS pnc-filters DESTINATION "${INSTALL_LIB_DIR}")
