--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,7 +1,7 @@
 FILE(GLOB_RECURSE sources "*.cpp")
 FILE(GLOB_RECURSE headers "*.hpp")
 
-add_library(pnc-utils SHARED ${sources})
+add_library(pnc-utils ${sources})
 target_link_libraries(pnc-utils pnc-yaml)
 
 install(TARGETS pnc-utils DESTINATION "${INSTALL_LIB_DIR}")
