--- a/pnc/planners/locomotion/dcm_planner/CMakeLists.txt
+++ b/pnc/planners/locomotion/dcm_planner/CMakeLists.txt
@@ -1,7 +1,7 @@
 FILE(GLOB sources "*.cpp")
 FILE(GLOB headers "*.hpp")
 
-add_library(pnc-dcm-planner SHARED ${sources})
+add_library(pnc-dcm-planner ${sources})
 target_link_libraries(pnc-dcm-planner pnc-utils)
 
 install(TARGETS pnc-dcm-planner DESTINATION "${INSTALL_LIB_DIR}")
