--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -1,6 +1,6 @@
 servo_rate: 0.001
 
-save_freq: 50
+save_freq: 2
 ip_addr: "tcp://127.0.0.1:5557"
 
 wbc:
@@ -71,7 +71,8 @@ walking:
     swaying_amp: [0., 0.08, 0.]
     swaying_freq: [0., 0.3, 0.]
 
-    com_height: 0.73
+    #com_height: 0.73
+    com_height: 0.7
     swing_height: 0.04
 
     t_additional_ini_trans: 0.
