--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -1,6 +1,6 @@
 servo_rate: 0.001
 
-save_freq: 2
+save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
 wbc:
@@ -23,9 +23,13 @@ wbc:
     # Task Gains
     kp_com: [200., 200., 200.]
     kd_com: [10., 10., 10.]
+    #kp_com: [700., 700., 700.]
+    #kd_com: [40., 40., 40.]
 
     kp_torso_ori: [100., 100., 100.]
     kd_torso_ori: [10., 10., 10.]
+    #kp_torso_ori: [700., 700., 700.]
+    #kd_torso_ori: [40., 40., 40.]
 
     # ['neck_pitch', 'l_shoulder_fe', 'l_shoulder_aa', 'l_shoulder_ie',
     # 'l_elbow_fe', 'l_wrist_ps', 'l_wrist_pitch', 'r_shoulder_fe',
@@ -33,6 +37,8 @@ wbc:
     # 'r_wrist_pitch']
     kp_upper_body_joint: [40., 100., 100., 100., 50., 40., 40., 100., 100., 100., 50., 40., 40.]
     kd_upper_body_joint: [2., 8., 8., 8., 3., 2., 2., 8., 8., 8., 3., 2., 2.]
+    #kp_upper_body_joint: [700., 700., 700., 700., 700., 700., 700., 700., 700., 700., 700., 700., 700.]
+    #kd_upper_body_joint: [2., 8., 8., 8., 3., 2., 2., 8., 8., 8., 3., 2., 2.]
 
     kp_foot_pos: [300., 300., 300.]
     kd_foot_pos: [30., 30., 30.]
@@ -71,8 +77,7 @@ walking:
     swaying_amp: [0., 0.08, 0.]
     swaying_freq: [0., 0.3, 0.]
 
-    #com_height: 0.73
-    com_height: 0.7
+    com_height: 0.73
     swing_height: 0.04
 
     t_additional_ini_trans: 0.
