remove pinocchio dep in conda env, add doxygen related

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,69 @@ if(NOT EIGEN_FOUND)
 endif()
 include_directories(${EIGEN_INCLUDE_DIRS})
 
+# doxygen
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+  set(DOXYGEN_DOXYFILE_IN      "${PROJECT_SOURCE_DIR}/doxygen/Doxyfile.in"    )
+  set(DOXYGEN_DOXYFILE         "${PROJECT_BINARY_DIR}/doxygen/Doxyfile"       )
+  set(DOXYGEN_HTML_INDEX       "${PROJECT_BINARY_DIR}/doxygen/html/index.html")
+  set(DOXYGEN_OUTPUT_ROOT      "${PROJECT_BINARY_DIR}/doxygen/html"           )
+  set(DOXYGEN_GENERATE_TAGFILE "${DOXYGEN_OUTPUT_ROOT}/${PROJECT_NAME}.tag"   )
+  set(DOXYGEN_INCLUDE_PATH     "${PROJECT_SOURCE_DIR}"                        )
+  set(DOXYGEN_INPUT_ROOT       "${PROJECT_SOURCE_DIR}/pnc"                    )
+  set(DOXYGEN_EXTRA_INPUTS     "${PROJECT_SOURCE_DIR}/doxygen/mainpage.dox"   )
+  set(DOXYGEN_EXCLUDE          ""                                             )
+  set(DOXYGEN_STRIP_FROM_PATH  "${CMAKE_CURRENT_SOURCE_DIR}"                  )
+
+  # Generate a Doxyfile. This uses the variables:
+  #
+  # - DOXYGEN_OUTPUT_ROOT
+  # - DOXYGEN_GENERATE_TAGFILE
+  # - DOXYGEN_EXTRA_INPUTS
+  # - DOXYGEN_INPUT_ROOT
+  # - DOXYGEN_EXCLUDE
+  # - DOXYGEN_STRIP_FROM_PATH
+  configure_file(${DOXYGEN_DOXYFILE_IN} ${DOXYGEN_DOXYFILE} @ONLY)
+  add_custom_command(
+    OUTPUT ${DOXYGEN_HTML_INDEX}
+    COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
+    COMMAND ${DOXYGEN_EXECUTABLE} -u ${DOXYGEN_DOXYFILE}
+    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_DOXYFILE}
+    # Strip path prefix from all paths in dart.tag
+    COMMAND ${CMAKE_COMMAND} -E echo "Stripping paths from"
+        "${DOXYGEN_GENERATE_TAGFILE}"
+    COMMAND sed -i s:${DOXYGEN_STRIP_FROM_PATH}::g ${DOXYGEN_GENERATE_TAGFILE}
+    # Strip all doxygen="path" HTML tags
+    COMMAND ${CMAKE_COMMAND} -E echo "Stripping Doxygen HTML tags"
+    COMMAND find "${DOXYGEN_OUTPUT_ROOT}" -type f -name "*.html"
+        -exec sed -i 's: doxygen=\"[^\"]*\"::g' {} \\$<SEMICOLON>
+    COMMAND ${CMAKE_COMMAND} -E echo "Done."
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/doxygen
+    DEPENDS ${DOXYGEN_DOXYFILE}
+  )
+  # add_custom_target(docs ALL DEPENDS ${DOXYGEN_HTML_INDEX})
+  add_custom_target(docs DEPENDS ${DOXYGEN_HTML_INDEX})
+  add_custom_target(
+    docs_forced
+    COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
+    COMMAND ${DOXYGEN_EXECUTABLE} -u ${DOXYGEN_DOXYFILE}
+    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_DOXYFILE}
+    COMMAND ${CMAKE_COMMAND} -E echo "Done."
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/doxygen
+  )
+
+  # Add the "view_docs" target that opens the generated API documentation.
+  if(APPLE)
+    set(OPEN_COMMAND "open")
+  else()
+    set(OPEN_COMMAND "xdg-open")
+  endif()
+
+  add_custom_target(view_docs "${OPEN_COMMAND}" "${DOXYGEN_HTML_INDEX}"
+    DEPENDS "${DOXYGEN_HTML_INDEX}"
+    COMMENT "Opening documentation in a web browser.")
+endif()
+
 # zmq and protobuf
 set(B_MESSAGING false)
 find_package(ZMQ)
