--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -23,13 +23,9 @@ wbc:
     # Task Gains
     kp_com: [200., 200., 200.]
     kd_com: [10., 10., 10.]
-    #kp_com: [700., 700., 700.]
-    #kd_com: [40., 40., 40.]
 
     kp_torso_ori: [100., 100., 100.]
     kd_torso_ori: [10., 10., 10.]
-    #kp_torso_ori: [700., 700., 700.]
-    #kd_torso_ori: [40., 40., 40.]
 
     # ['neck_pitch', 'l_shoulder_fe', 'l_shoulder_aa', 'l_shoulder_ie',
     # 'l_elbow_fe', 'l_wrist_ps', 'l_wrist_pitch', 'r_shoulder_fe',
@@ -37,8 +33,6 @@ wbc:
     # 'r_wrist_pitch']
     kp_upper_body_joint: [40., 100., 100., 100., 50., 40., 40., 100., 100., 100., 50., 40., 40.]
     kd_upper_body_joint: [2., 8., 8., 8., 3., 2., 2., 8., 8., 8., 3., 2., 2.]
-    #kp_upper_body_joint: [700., 700., 700., 700., 700., 700., 700., 700., 700., 700., 700., 700., 700.]
-    #kd_upper_body_joint: [2., 8., 8., 8., 3., 2., 2., 8., 8., 8., 3., 2., 2.]
 
     kp_foot_pos: [300., 300., 300.]
     kd_foot_pos: [30., 30., 30.]
@@ -51,6 +45,13 @@ wbc:
     vel_cutoff_freq: 2.0 # Hz
     pos_cutoff_freq: 1.0 # Hz
     max_pos_err: 0.2 # rad
+
+balancing:
+    swaying_amp: [0., 0.08, 0.]
+    swaying_freq: [0., 0.3, 0.]
+
+    interpolation_local_offset: [0., 0.1, 0.]
+    interpolation_duration: 3.
 
 walking:
     ini_joint_dur: 4.
@@ -74,8 +75,6 @@ walking:
     ini_stand_dur: 1.
     rf_z_max_time: 0.1
 
-    swaying_amp: [0., 0.08, 0.]
-    swaying_freq: [0., 0.3, 0.]
 
     com_height: 0.73
     swing_height: 0.04
