Fixed the build for python 3.8.5. Removed pybind11 and instead use Anaconda version. Updated mingyo yml for making the conda env. Updated README to instruct on the cmake .. step

--- a/ExternalSource/CMakeLists.txt
+++ b/ExternalSource/CMakeLists.txt
@@ -2,6 +2,6 @@ add_subdirectory(myYaml)
 add_subdirectory(myCDD)
 add_subdirectory(myOptimizer)
 # add_subdirectory(myOdometry)
-if(USE_PYBIND11)
-  add_subdirectory(pybind11)
-endif()
+# if(USE_PYBIND11)
+  # add_subdirectory(pybind11)
+# endif()
