--- a/mingyo.yml
+++ b/mingyo.yml
@@ -2,7 +2,8 @@ name: mingyo
 channels:
   - conda-forge
 dependencies:
-  - python=3.7.9
+  - python=3.8.5
+  - pybind11=2.6.2
   - pip=21.1.2
   - pip:
       - qpsolvers==1.5
