fixed draco works

--- a/pnc/CMakeLists.txt
+++ b/pnc/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(robot_system)
 add_subdirectory(filters)
 add_subdirectory(atlas_pnc)
 add_subdirectory(draco_pnc)
+add_subdirectory(fixed_draco_pnc)
 
 file(GLOB pnc_headers "*.hpp")
 install(FILES ${pnc_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/pnc")
