--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -2,6 +2,7 @@ servo_dt: 0.001
 
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
+smoothing_duration: 0.1
 
 wbc:
     rf_z_max: 1000.0
@@ -72,9 +73,20 @@ walking:
         r_knee_fe_jd: 0.785
         r_ankle_fe: -0.785
         r_ankle_ie: 0.087
+        neck_pitch: 0.
+        r_hip_ie: 0.
+        l_hip_ie: 0.
+        l_shoulder_fe: 0.
+        r_shoulder_fe: 0.
+        l_shoulder_ie: 0.
+        r_shoulder_ie: 0.
+        l_wrist_ps: 0.
+        r_wrist_ps: 0.
+        l_wrist_pitch: 0.
+        r_wrist_pitch: 0.
+
     ini_stand_dur: 1.
     rf_z_max_time: 0.1
-
 
     com_height: 0.73
     swing_height: 0.04
